--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -27,6 +27,9 @@ dependencies:
   gallery: ^0.0.1
   flutter_gallery_assets: ^1.0.2
   flutter_localized_locales: ^2.0.1
+  firebase_core: ^1.0.1
+  cloud_firestore: ^1.0.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
